remove placeholder text

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <hr class="ids-divider" />
     <div class="ids-textarea ids-mt-10">
       <label for="textarea-input" class="ids-label">* Aktuellt</label>
-      <textarea id="textarea-input" placeholder="Skriv snabbtext och tryck ' (apostrof) för att ersätta enligt ordlista..."></textarea>
+      <textarea id="textarea-input"></textarea>
     </div>
 
     <!-- Indikatorn är nu en knapp som även öppnar panelen -->
